@@ -1,3 +1,8 @@
+2012-06-08  Per Bothner  <per@bothner.com>
+
+	* lang/SyntaxTemplate.java (convert_template): The 2012-04-18
+	fix was incorrect.
+
 2012-05-20  Per Bothner  <per@bothner.com>
 
 	* repl.java (processArgs): Fix typo "target" -> "-target".
